[project]
name = "code-review-assigner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

